rtpulpfec: fix debug log printf format warning on 32-bit platforms

https://bugzilla.gnome.org/show_bug.cgi?id=793732